@@ -25,10 +25,10 @@ support.o: support.c
 install-non-root: install
 
 install:
-	mkdir -p $(DESTDIR)$(SLIBDIR)/security
-	mkdir -p $(DESTDIR)$(MANDIR)/man8
-	install -m $(SHLIBMODE) $(PAM_TCB) $(DESTDIR)$(SLIBDIR)/security/
-	install -p -m 644 pam_tcb.8 $(DESTDIR)$(MANDIR)/man8/
+	$(MKDIR) -p -m 755 $(DESTDIR)$(SLIBDIR)/security
+	$(MKDIR) -p -m 755 $(DESTDIR)$(MANDIR)/man8
+	$(INSTALL) -m $(SHLIBMODE) $(PAM_TCB) $(DESTDIR)$(SLIBDIR)/security/
+	$(INSTALL) -m 644 pam_tcb.8 $(DESTDIR)$(MANDIR)/man8/
 
 install-pam_unix: install
 	ln -s $(PAM_TCB) $(DESTDIR)$(SLIBDIR)/security/pam_unix.so
@@ -36,11 +36,11 @@ install-pam_unix: install
 	ln -s $(PAM_TCB) $(DESTDIR)$(SLIBDIR)/security/pam_unix_auth.so
 	ln -s $(PAM_TCB) $(DESTDIR)$(SLIBDIR)/security/pam_unix_passwd.so
 	ln -s $(PAM_TCB) $(DESTDIR)$(SLIBDIR)/security/pam_unix_session.so
-	install -p -m 644 pam_unix.8 $(DESTDIR)$(MANDIR)/man8/
+	$(INSTALL) -m 644 pam_unix.8 $(DESTDIR)$(MANDIR)/man8/
 
 install-pam_pwdb: install
 	ln -s $(PAM_TCB) $(DESTDIR)$(SLIBDIR)/security/pam_pwdb.so
-	install -p -m 644 pam_pwdb.8 $(DESTDIR)$(MANDIR)/man8/
+	$(INSTALL) -m 644 pam_pwdb.8 $(DESTDIR)$(MANDIR)/man8/
 
 clean:
 	rm -f *.o *~ $(PAM_TCB)
